Fix date visualization, add more styling to items The date is now being formatted with the help of an external library. On individual board's page, all items now appear with consistent size for their type, as well as readable contents

--- a/src/static/styles/items-screen.css
+++ b/src/static/styles/items-screen.css
@@ -49,8 +49,14 @@ main#items::before {
   position: relative;
 }
 
+.item > .title {
+  text-align: center;
+}
+
 .item.note {
   grid-row: span 1;
+  min-height: 100px;
+  
 }
 
 .item.todo {
@@ -72,13 +78,33 @@ main#items::before {
   box-shadow: 2px 5px 10px rgba(0,0,0,0.3);
   position: relative;
   display: grid;
-  
   font-family: 'Courier New', Courier, monospace;
   color: #2f2f2f;
   font-weight: bold;
   border-bottom-right-radius: 60px 5px; 
   clip-path: polygon(0% 0%, 100% 0%, 98% 100%, 2% 97%);
   transform-origin: top center;
+}
+
+.item > .item-contents {
+  overflow: scroll;
+  display: grid;
+  align-content: start;
+  border-radius: 5px;
+  border: 1px solid transparent;
+  transition: border 80ms;
+}
+
+.item > .item-contents:hover {
+  border: 1px solid rgba(0,0,0,0.3);
+}
+
+.item > .decorative-div {
+  width: 100%;
+  height: 25px;
+  position: absolute;
+  top: 0;
+  left: 0
 }
 
 .item-hovered {
@@ -88,7 +114,7 @@ main#items::before {
 .item::before {
   content: '';
   position: absolute;
-  top: 0px;
+  top: 1px;
   left: 50%;
   width: 15px;
   height: 15px;
